fix mobile close z-index issue in docs sidenav

--- a/packages/docs-sidenav/style.css
+++ b/packages/docs-sidenav/style.css
@@ -68,6 +68,7 @@
     color: #333;
     transition: opacity 0.3s ease;
     display: none;
+    z-index: 100;
 
     &:hover {
       opacity: 0.7;
